[package]
name = "krb5-js"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
napi-build = "1"

[dependencies]
krb5-rs = { path = "../krb5_rs" }
thiserror = "1"
napi = { version = "2", default-features = false, features = ["napi6"] }
napi-derive = "2"
base64 = "0.13"
regex = "1"
lazy_static = "1.4"
