[package]
name = "krb5-sys"
version = "0.1.0"
edition = "2021"
links = "krb5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
bindgen = "0.63.0"
cc = "1.0"

[target.'cfg(not(windows))'.build-dependencies]
pkg-config = "0.3"

[target.'cfg(any(windows))'.build-dependencies]
winreg = { version = "0.10" }
